--- a/index.html
+++ b/index.html
@@ -1,200 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>NeoGPT</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NeoGPT</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+        /* Reset & fonts */
+        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Inter', sans-serif; }
+        body { background-color: #111; color: #eee; display: flex; flex-direction: column; height: 100vh; }
+        
+        /* Header */
+        header { padding: 20px; text-align: center; background-color: #1a1a1a; font-size: 1.8rem; font-weight: 700; letter-spacing: 1px; }
+        
+        /* Chat container */
+        #chat-container { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 10px; }
+        .message { max-width: 70%; padding: 12px 16px; border-radius: 12px; line-height: 1.4; }
+        .user { align-self: flex-end; background-color: #0f62fe; color: #fff; }
+        .bot { align-self: flex-start; background-color: #2e2e2e; color: #fff; }
 
-<style>
-* {
-  box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
-}
+        /* Input section */
+        #input-section { display: flex; padding: 10px 20px; background-color: #1a1a1a; }
+        #prompt { flex: 1; padding: 12px 16px; border-radius: 12px; border: none; outline: none; background-color: #2e2e2e; color: #fff; }
+        #send-btn { margin-left: 10px; padding: 12px 16px; border: none; border-radius: 12px; background-color: #0f62fe; color: #fff; cursor: pointer; font-weight: 500; }
 
-body {
-  margin: 0;
-  height: 100vh;
-  display: flex;
-  background: #0f0f0f;
-  color: #e5e5e5;
-}
-
-/* Sidebar */
-.sidebar {
-  width: 260px;
-  background: #111;
-  border-right: 1px solid #222;
-  padding: 12px;
-  display: flex;
-  flex-direction: column;
-}
-
-.sidebar h2 {
-  margin: 10px;
-  font-size: 18px;
-}
-
-.chat-list {
-  flex: 1;
-  overflow-y: auto;
-}
-
-.chat-item {
-  padding: 10px;
-  margin-bottom: 6px;
-  border-radius: 8px;
-  cursor: pointer;
-  background: #1a1a1a;
-}
-
-.chat-item:hover {
-  background: #2a2a2a;
-}
-
-/* Main */
-.main {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-}
-
-.messages {
-  flex: 1;
-  padding: 24px;
-  overflow-y: auto;
-}
-
-.message {
-  max-width: 70%;
-  margin-bottom: 16px;
-  padding: 14px;
-  border-radius: 12px;
-  line-height: 1.4;
-}
-
-.user {
-  background: #2a2a2a;
-  align-self: flex-end;
-}
-
-.bot {
-  background: #1a1a1a;
-  align-self: flex-start;
-}
-
-/* Input */
-.input-bar {
-  padding: 16px;
-  border-top: 1px solid #222;
-  display: flex;
-  gap: 10px;
-}
-
-input {
-  flex: 1;
-  padding: 14px;
-  background: #111;
-  border: 1px solid #333;
-  border-radius: 10px;
-  color: white;
-  font-size: 16px;
-}
-
-button {
-  padding: 14px 18px;
-  background: #444;
-  border: none;
-  border-radius: 10px;
-  color: white;
-  cursor: pointer;
-}
-
-button:hover {
-  background: #666;
-}
-</style>
+        /* Scrollbar */
+        #chat-container::-webkit-scrollbar { width: 6px; }
+        #chat-container::-webkit-scrollbar-thumb { background-color: #555; border-radius: 3px; }
+    </style>
 </head>
-
 <body>
 
-<!-- Sidebar -->
-<div class="sidebar">
-  <h2>NeoGPT</h2>
-  <div class="chat-list" id="chatList"></div>
-</div>
+<header>NeoGPT</header>
 
-<!-- Main Chat -->
-<div class="main">
-  <div class="messages" id="messages"></div>
+<div id="chat-container"></div>
 
-  <div class="input-bar">
-    <input id="input" placeholder="Message NeoGPT..." />
-    <button onclick="send()">Send</button>
-  </div>
+<div id="input-section">
+    <input type="text" id="prompt" placeholder="Ask me anything..." />
+    <button id="send-btn">Send</button>
 </div>
 
 <script>
-const backend = "https://CreatorOfNeoGPT.pythonanywhere.com/chat";
-let history = JSON.parse(localStorage.getItem("neogpt_history")) || [];
+    const chatContainer = document.getElementById('chat-container');
+    const promptInput = document.getElementById('prompt');
+    const sendBtn = document.getElementById('send-btn');
 
-const messagesDiv = document.getElementById("messages");
-const chatList = document.getElementById("chatList");
+    function addMessage(text, sender) {
+        const msg = document.createElement('div');
+        msg.classList.add('message', sender);
+        msg.textContent = text;
+        chatContainer.appendChild(msg);
+        chatContainer.scrollTop = chatContainer.scrollHeight;
+    }
 
-function renderHistory() {
-  chatList.innerHTML = "";
-  history.forEach((h, i) => {
-    const div = document.createElement("div");
-    div.className = "chat-item";
-    div.textContent = h.user.slice(0, 30);
-    div.onclick = () => loadChat(i);
-    chatList.appendChild(div);
-  });
-}
+    async function sendPrompt() {
+        const prompt = promptInput.value.trim();
+        if (!prompt) return;
 
-function loadChat(i) {
-  messagesDiv.innerHTML = "";
-  addMessage("user", history[i].user);
-  addMessage("bot", history[i].bot);
-}
+        addMessage(prompt, 'user');
+        promptInput.value = '';
 
-function addMessage(role, text) {
-  const div = document.createElement("div");
-  div.className = "message " + role;
-  div.textContent = text;
-  messagesDiv.appendChild(div);
-  messagesDiv.scrollTop = messagesDiv.scrollHeight;
-}
+        try {
+            const response = await fetch('https://CreatorOfNeoGPT.pythonanywhere.com/chat', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ prompt })
+            });
+            const data = await response.json();
+            addMessage(data.response || 'No response', 'bot');
+        } catch (err) {
+            addMessage('Error connecting to backend', 'bot');
+            console.error(err);
+        }
+    }
 
-async function send() {
-  const input = document.getElementById("input");
-  const text = input.value.trim();
-  if (!text) return;
-
-  addMessage("user", text);
-  input.value = "";
-
-  try {
-    const res = await fetch(backend, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ prompt: text })
+    sendBtn.addEventListener('click', sendPrompt);
+    promptInput.addEventListener('keydown', (e) => {
+        if (e.key === 'Enter') sendPrompt();
     });
-
-    const data = await res.json();
-    const reply = data.response || "No response.";
-
-    addMessage("bot", reply);
-
-    history.push({ user: text, bot: reply });
-    localStorage.setItem("neogpt_history", JSON.stringify(history));
-    renderHistory();
-
-  } catch (e) {
-    addMessage("bot", "❌ Could not connect to backend.");
-  }
-}
-
-renderHistory();
 </script>
 
 </body>
